@@ -76,6 +76,37 @@
 			},
 		],
 	},
+	{
+		"id": "WithoutMoveToOut",
+		"enabled": true,
+		"dry_run": false,
+		"tenant": "cgrates.org",
+		"run_delay": 0,
+		"lock_filename": ".cgr.lock",
+		"caches_conns": ["*internal"],
+		"field_separator": ",",
+		"tp_in_dir": "/tmp/LoaderIn",
+		"tp_out_dir": "",
+		"data":[
+			{
+				"type": "*attributes",
+				"file_name": "Attributes.csv",
+				"fields": [
+					{"tag": "TenantID", "path": "Tenant", "type": "*variable", "value": "~*req.0", "mandatory": true},
+					{"tag": "ProfileID", "path": "ID", "type": "*variable", "value": "~*req.1", "mandatory": true},
+					{"tag": "Contexts", "path": "Contexts", "type": "*variable", "value": "~*req.2"},
+					{"tag": "FilterIDs", "path": "FilterIDs", "type": "*variable", "value": "~*req.3"},
+					{"tag": "ActivationInterval", "path": "ActivationInterval", "type": "*variable", "value": "~*req.4"},
+					{"tag": "AttributeFilterIDs", "path": "AttributeFilterIDs", "type": "*variable", "value": "~*req.5"},
+					{"tag": "Path", "path": "Path", "type": "*variable", "value": "~*req.6"},
+					{"tag": "Type", "path": "Type", "type": "*variable", "value": "~*req.7"},
+					{"tag": "Value", "path": "Value", "type": "*variable", "value": "~*req.8"},
+					{"tag": "Blocker", "path": "Blocker", "type": "*variable", "value": "~*req.9"},
+					{"tag": "Weight", "path": "Weight", "type": "*variable", "value": "~*req.10"},
+				],
+			},
+		],
+	}
 ],
 
 
